--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "formik": "^2.4.1",
     "next": "13.4.4",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
@@ -25,6 +26,7 @@
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
+    "yup": "^1.2.0",
     "zustand": "^4.3.8"
   }
 }
