--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "yup": "^1.2.0",
-    "zustand": "^4.3.8"
+    "yup": "^1.2.0"
   }
 }
