--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@stripe/react-stripe-js": "^2.3.2",
+    "@stripe/stripe-js": "^2.1.11",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
@@ -24,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-toastify": "^9.1.3",
+    "stripe": "^14.4.0",
     "swiper": "^9.3.2",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.2",
